# ecos-api

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
examples/: demo.py
scripts/: build.py  test_local.sh  test_pypi.sh
src/ecos/: __init__.py  client.py  enums.py  exceptions.py  models.py
tests/: test_client.py
