[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecos-api"
version = "0.1.1"
description = "한국은행 경제통계시스템(ECOS) REST API Python 클라이언트"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Michael M. Kim", email = "mskim2k@sju.ac.kr" },
]
keywords = ["ecos", "bok", "한국은행", "경제통계", "api"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "respx>=0.22",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.urls]
Homepage = "https://github.com/michael2k/ecos-api"
Repository = "https://github.com/michael2k/ecos-api"
Issues = "https://github.com/michael2k/ecos-api/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ecos"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
